// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing: menu with items 1`] = `
<section
  className="root"
>
  <ul
    className="itemList"
  >
    <li
      className="item"
      key="menuitem-0"
    >
      test 1
    </li>
    <li
      className="item"
      key="menuitem-1"
    >
      test 2
    </li>
    <li
      className="item"
      key="menuitem-2"
    >
      test 3
    </li>
  </ul>
</section>
`;

exports[`renders without crashing: menu with no items 1`] = `
<section
  className="root"
>
  <ul
    className="itemList"
  />
</section>
`;
